# mcts-go

./: .gitignore  go.js  go.py  index.html  main.py  pyproject.toml  requirements.txt  style.css
src/: augment_data.py  go.py  mcts_node.py  neural_network.py  play_game.py  self_play.py  training.py
tests/: input.in  test_captured.py
